fixed spacing & animation added

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,35 @@ a {
   color: inherit;
 }
 
+@keyframes power {
+  0% {color: transparent;}
+  50% {color: white;}
+  100% {color: #ef4a23;}
+}
+
+@keyframes gradient {
+  0%{
+    background: #00237e,;
+    /* background: linear-gradient(    45deg,    #00237e,    #3749bb,    #0bc1e9,    #3749bb,    #00237e  ); */
+}
+   25%{
+    background: #3749bb;
+
+  }
+  50%{
+    background: #0bc1e9;
+    
+  }
+  75%{
+    background: #3749bb;
+    
+  } */
+  100%{
+    background: #00237e,;
+
+  }
+}
+
 /* ====================== Common CSS End ====================== */
 
 /* ====================== Header CSS Start ====================== */
@@ -49,11 +78,11 @@ a {
 #header {
   background: #081621;
 }
-.sidebyside {
+#header .sidebyside {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 0;
+  padding: 15px 0;
 }
 .header_logo {
   width: 144px;
@@ -64,6 +93,7 @@ a {
 }
 
 .header_search {
+  margin-left: -23px;
   width: 580px;
   height: 42px;
   background: white;
@@ -97,6 +127,7 @@ a {
 .header_content_items {
   display: flex;
   column-gap: 22px;
+  margin-top: 5px;
 }
 
 .header_content ul {
@@ -104,11 +135,16 @@ a {
   align-items: center;
   column-gap: 14px;
 }
-
 .header_content ul li i {
   color: #ef4a23;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 36px;
+}
+
+.header_content ul li .blink {
+  font-size: 22px !important;
+  animation: power 2s infinite linear;
+  -webkit-animation: power 2s infinite linear;
 }
 
 .header_content ul li h5 {
@@ -127,16 +163,9 @@ a {
 
 .header_button button {
   padding: 0 20px;
-  background: linear-gradient(
-    45deg,
-    #00237e,
-    #3749bb,
-    #0bc1e9,
-    #3749bb,
-    #00237e
-  );
+  background: linear-gradient(    45deg,    #00237e,    #3749bb,    #0bc1e9,    #3749bb,    #00237e  );
   background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  animation: gradient 15s linear infinite ;
   border: none;
   line-height: 42px;
   font-size: 14px;
@@ -146,10 +175,29 @@ a {
   border-radius: 4px;
   outline: none;
   text-align: center;
+  -webkit-animation: gradient 15s linear infinite ;
 }
 
 /* ====================== Header CSS End ====================== */
 /* ====================== Navbar CSS Start ====================== */
+nav{
+  position: sticky !important;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+}
+
+nav .navbar-collapse .navbar-nav .nav-link{
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+
+nav .navbar-nav{
+  margin-left: -7px !important;
+
+}
+
 nav.navbar.navbar-expand-lg {
   background: #fff;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
@@ -188,8 +236,8 @@ nav.navbar.navbar-expand-lg {
 
 .product-info {
   background: #ffe8a1;
-  margin-bottom: 31px;
-  padding: 25px 30px;
+  margin-bottom: 30px;
+  padding: 30px 34px;
   box-shadow: 5px 5px 0 rgba(0, 0, 0, .03);
   box-sizing: border-box;
 }
@@ -199,7 +247,7 @@ nav.navbar.navbar-expand-lg {
   font-weight: 700;
   font-family: "Trebuchet MS", sans-serif;
   color: #000000;
-  margin-bottom: 12px;
+  margin-bottom: 7px;
 }
 
 .product-info p {
@@ -207,7 +255,7 @@ nav.navbar.navbar-expand-lg {
   font-weight: 400;
   font-family: "Trebuchet MS", sans-serif;
   color: rgba(0, 0, 0, 0.50);
-  margin-bottom: 20px;
+  margin-bottom: 14px;
 }
 
 .choose-field {
@@ -215,13 +263,14 @@ nav.navbar.navbar-expand-lg {
 }
 
 .choose-field input {
-  padding: 5px 30px 5px 15px;
+  height: 42px;
+  padding: 8px 43px 7px 15px;
   box-shadow: 2px 2px 0 rgba(0, 0, 0, .05);
   font-size: 15px;
   font-weight: 400;
   background: #fff;
   outline: none;
-  width: 100%;
+  /* width: 100%; */
   font-family: "Trebuchet MS", sans-serif;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -313,7 +362,7 @@ nav.navbar.navbar-expand-lg {
 
 .news-feed {
   width: 100%;
-  padding: 12px 20px 8px;
+  padding: 10px 20px 5px;
   background: #fff;
   margin-top: 30px;
   border-radius: 33px;
@@ -329,7 +378,7 @@ nav.navbar.navbar-expand-lg {
 #feature {
   background: #F2F4F8;
   padding-top: 55px;
-  padding-bottom: 55px;
+  /* padding-bottom: 55px; */
 }
 
 .feature-header {
@@ -398,8 +447,8 @@ nav.navbar.navbar-expand-lg {
 }
 
 .store-info {
-  margin-top: 60px;
-  padding: 30px;
+  margin-top: 50px;
+  padding: 35px 35px 40px 38px;
   background: linear-gradient(125deg, #0bc1e9, #3749bb, #00237e);
   border-radius: 5px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
@@ -415,7 +464,7 @@ nav.navbar.navbar-expand-lg {
 }
 
 .store-info-left i {
-  font-size: 48px;
+  font-size: 40px;
   color: #FFFFFF;
 }
 
@@ -526,7 +575,8 @@ nav.navbar.navbar-expand-lg {
 /*======================== Comper_cart End ==================*/
  /* ==================================== Feature Products start ===================================  */
  #featured{
-    padding-top: 68px;
+  margin-top: 50px;
+    /* padding-top: 68px; */
     /* padding-bottom: 100px; */
 }
 .featured_heading h2 {
@@ -651,9 +701,8 @@ nav.navbar.navbar-expand-lg {
  
 /* ====================== product details Start ====================== */
 
-.prodact-details{
-  margin: 0;
-  padding: 0;
+#product-desc{
+  padding: 50px 0 56px;
 }
 .product-details .description-1 h1{
   font-size: 23px;
@@ -694,9 +743,11 @@ nav.navbar.navbar-expand-lg {
   padding-bottom: 25px;
 }
 
-.main_footer{
-  padding-bottom: 28px;
+
+footer .pdb{
+  padding-bottom: 30px;
 }
+
 .footer_contact_us h4 {
   color: #fff;
   margin-bottom: 30px;
@@ -707,6 +758,7 @@ nav.navbar.navbar-expand-lg {
 }
 
 .footer_contact_us ul {
+  max-width: 270px;
   display: block;
   padding: 10px 0;
   border-radius: 50px;
@@ -827,6 +879,7 @@ nav.navbar.navbar-expand-lg {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   padding: 15px 0;
   display: flex;
+  justify-content: space-between;
 }
 
 .apps_link {
@@ -896,6 +949,7 @@ nav.navbar.navbar-expand-lg {
 
 .sub_footer{
 padding-top: 15px;
+justify-content: space-between;
 }
 
 .sub_footer_copy_right p{
